# fastApi_YLAB_project

./: .env  .env-non-dev  .env.no  .pre-commit-config.yaml  Dockerfile  Dockerfile-tests  Menu.xlsx  README.md  docker-compose-test.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt
admin/: Menu.xlsx
features/: environment.py  example.feature  menu.feature
python_code/: config.py  db.py  logger.py  main.py  redis.py  utils.py
python_code/cruds/: dish_crud.py  menu_crud.py  submenu_crud.py
python_code/dao/: redis_dao.py
python_code/models/: dish_model.py  menu_model.py  submenu_model.py
python_code/my_celery/: celery_config.py  celery_main.py  tasks.py
python_code/routers/: dish_router.py  menu_router.py  submenu_router.py
python_code/schemas/: dish_schemas.py  menu_schemas.py  submenu_schemas.py
python_code/service/: dish_service.py  menu_service.py  submenu_service.py
tests/: .env.no  conftest.py  test_count_checker_scenario.py  test_dish.py  test_main.py  test_menu.py  test_submenu.py
