[tool.poetry]
name = "fastApiProject1"
version = "0.1.0"
description = ""
authors = ["veiiev <worldloflwarcraft@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
pydantic-settings = "^2.0.2"
pydantic = "^2.0.3"
asyncpg = "^0.28.0"
psycopg2 = "^2.9.6"
psycopg2-binary = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
