[tool.poetry]
name = "fastApiProject1"
version = "0.1.0"
description = ""
authors = ["veiiev <worldloflwarcraft@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
pydantic-settings = "^2.0.2"
pydantic = "^2.0.3"
asyncpg = "^0.28.0"
psycopg2-binary = "^2.9.6"
pytest = "^7.4.0"
httpx = "^0.24.1"
behave = "^1.2.6"
parse = "^1.19.1"
requests = "^2.31.0"
pytest-bdd = "^6.1.1"
pre-commit = "^3.3.3"
mypy = "^1.4.1"
redis = "^4.6.0"
sqlalchemy = "^2.0.19"
aioredis = "^2.0.1"
pytest-asyncio = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
